<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Night Light</string>
    <string name="app_name_full" translatable="false">Night Light (KCAL)</string>
    <string name="master_switch">Enable Night Light</string>
    <string name="master_switch_desc_off">Master switch is off. Turn it on to enable all the features of the app. To turn it on, tap the power button above.</string>
    <string name="master_switch_desc_on">Master switch is on. All the features of the app are enabled. Turn it off to disable all the features of the app. To turn it off, tap the power button above.</string>
    <string name="no_root_access">No root access</string>
    <string name="no_root_desc">Root access is needed for Night Light to work.</string>
    <string name="no_kcal">Incompatible</string>
    <string name="no_kcal_desc">Your kernel does not support KCAL. KCAL is a display driver tuning feature for Qualcomm devices. KCAL support is needed for Night Light to work.</string>
    <string name="auto_enable">Automatic switch</string>
    <string name="auto_enable_desc">Automatically enable Night Light between the specified time. Night Light will be automatically disabled outside this time range.</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="dark_hours_title">Enable dark hours</string>
    <string name="dark_hours_desc">This enables the use of minimum and maximum intensities as a part of automated time schedule. If enabled, the minimum intensity will be applied from start time to dark hours start time, and maximum intensity will be used then on until the schedule ends.</string>
    <string name="dark_hours_start_time">Dark hours start time</string>
    <string name="dark_hours_set_error">Time must be in between schedule start time and end time</string>
    <string name="start_time_default" translatable="false">00:00</string>
    <string name="end_time_default" translatable="false">06:00</string>
    <string name="about">About</string>
    <string name="app_desc">Night Light uses KCAL, which is a display driver tuning feature for new generation Qualcomm devices, to adjust the intensity of blue light, which makes it more comfortable for your eyes when you are using your phone in the dark and helps you fall asleep. Since it makes changes at driver level, and it does not use any software overlays, it is battery friendly and the change can be seen everywhere on the display.</string>
    <string name="shortcut_toggle">Toggle on/off</string>
    <string name="next_day">&#160;(Next day)</string>
    <string name="sun_switch">Use sunset/sunrise timings</string>
    <string name="location_unavailable">Unable to get your last known location.</string>
    <string name="kcal_preservce_value_msg">Preserve current KCAL values</string>
    <string name="contributors">Contributors</string>
    <string name="color_temperature_title">Color Temperature</string>
    <string name="color_temperature_desc">Value of the color temperature to be set. Lower temperatures are better suitable for low light viewing.</string>
    <string name="set_on_boot_delay_title">Delay</string>
    <string name="set_on_boot_delay_desc">Set the delay after which Night Light settings will be restored and applied after boot. Night Light settings will be applied after %s delay.</string>
    <string name="set_on_boot_delay_warn">Looks like Night Light settings were restored but could not be applied after most recent boot. Consider increasing this delay so that settings can be successfully restored and applied after boot.</string>
    <string name="section_kcal_backup">KCAL Backup</string>
    <string name="kcal_backup_set_title">KCAL Backup Settings</string>
    <string name="kcal_backup_set_desc">You can configure your old KCAL settings here. These settings will applied when night light is turned off.</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="kcal_backup_set">Configure</string>
    <string name="profile_title">Profiles</string>
    <string name="profile_create_title">Create profile</string>
    <string name="profile_create_desc">Create a profile (collection of settings), which you can then apply it easily with one click, or use apps like Tasker apply it for you,</string>
    <string name="profile_edit_title">Edit profile</string>
    <string name="profile_edit_desc">Edit an existing profile</string>
    <string name="profile_setting_mode">Setting mode</string>
    <string name="profile_nl_switch">Night Light switch</string>
    <string name="profile_nl_setting_unavailable">Setting unavailable</string>
    <string name="profile_create_name">Profile name</string>
    <string name="profile_create_name_error">A profile with same name already exists, please try another name.</string>
    <string name="profile_empty_title">No profiles created</string>
    <string name="profile_empty_desc">Tap the + button to start setting up a profile</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_details">Are you sure want to delete the %1$s profile?</string>
    <string name="confirm">Confirm</string>
    <string name="tasker_confirm_selection">Are you sure you want use %1$s profile as a part of your Tasker plugin routine?</string>
    <string name="tasker_error_title">Night Light disabled</string>
    <string name="tasker_error_desc">To use tasker plugin, you must enable Master Switch first.</string>
    <string name="section_main">Master controls</string>
    <string name="section_color">Color controls</string>
    <string name="section_sob">Set on boot</string>
    <string name="section_auto">Automation</string>
    <string name="section_profiles_list">List of profiles created</string>
    <string name="profiles_desc">Profiles are collection of settings which can be applied with one click, or let apps like Tasker to apply it for you using the automation capabilities that they provide.</string>
    <string name="kcal_backup_every_time_before_enabling">Backup current KCAL values every time before Night Light is enabled</string>
    <string name="faq">F.A.Q</string>
    <string name="root_question">Q. Why does the app require root access?</string>
    <string name="root_answer">Root access is required to modify KCAL values. This is impossible without root access.</string>
    <string name="master_switch_function_question">Q. What does the master switch do?</string>
    <string name="master_switch_function_answer">It basically enables all the functions of the app. If master switch is off, none of the functions will be enabled, and vice versa.</string>
    <string name="master_switch_exist_question">Q. OK then why does master switch exist? We would have to enable master switch anyway to use the app.</string>
    <string name="master_switch_exist_answer">Since Night Light supports features like automation and set on boot, it is necessary for such switch to exist, so that such external requests can be dealt with accordingly. Imagine you have this app installed, but for some reason you don\'t use the app, if master switch was not present at all, a previously set automation schedule could still turn on Night Light.</string>
    <string name="kcal_backup_question">Q. What does the KCAL backup options do?</string>
    <string name="kcal_backup_answer">This option takes account of the user\'s custom KCAL settings. So that while turning off Night Light, the app is able to restore user\'s settings.</string>
    <string name="sob_question">Q. Since KCAL values are reset after boot, will the app will still be able function after that?</string>
    <string name="sob_answer">Yes. After a reboot, app will re-apply night light values to KCAL, and re-set all the automation schedules. However it does not apply user\'s custom KCAL values (if night light should be off after boot). If for some reason, things were not applied properly after boot, consider increasing Set On boot delay. If the problem persists, please open an issue in github, or mention about the same in XDA thread. Links for them can be found in About section.</string>
    <string name="filter_modes_question">Q. What\'s with the various filtering modes?</string>
    <string name="filter_modes_answer">There are 2 filtering modes available. Color temperature provides a simple yet effective control for filtering out blue light. Range of color temperature supported is from 2500K to 5000K. And the other mode supported is manual KCAL color control to cater for custom RGB color value needs.</string>
    <string name="intensity_type_question">Q. What are minimum and maximum intensities?</string>
    <string name="intensity_type_answer">Minimum and maximum intensities are 2 intensity types which lets the user to set different filter intensity values under each type and use them as per their choice. As the names suggest, it is advisable to set a lower intensity setting under minimum intensity, and a higher intensity under maximum intensity. Minimum intensity may then be used at evenings (dark but lighted environments) and maximum intensity may be used at nights (under pitch dark conditions).</string>
    <string name="location_question">Q. Why does the app require Location permission?</string>
    <string name="location_answer">Location permission is required to determine sunset and sunrise timing for your location. Location permission is only asked when you enable automation and use sunset/sunrise timings. Your location is not shared or misused in anyway.</string>
    <string name="external_switch_question">Q. Is there any way for the user to toggle Night Light on/off without opening the app?</string>
    <string name="external_switch_answer">Yes. Night Light supports toggling itself on/off from launcher shortcuts and through a tile in quick toggles. You need to add the tile in the quick toggles manually though.</string>
    <string name="external_switch_fn_question">Q. How does the quick toggles work?</string>
    <string name="external_switch_fn_answer">Quick toggle can turn on/off Night Light irrespective of automation schedule. If however, the master switch is disabled, toggling on will turn on the master switch as well, so that Night Light can be turned on. Toggling off does not turn off the master switch though. It may seem complicated, but the way it works should provide a good user experience.</string>
    <string name="github" translatable="false">Github</string>
    <string name="xda" translatable="false">XDA Developers</string>
    <string name="options">Options</string>
    <string name="manual_mode_title">Manual Mode</string>
    <string name="manual_mode_desc">Manual KCAL color controls gives you full freedom on how you would like to tune display colors so that your needs are met.</string>
    <string name="kcal_driver_information_full">KCAL Driver Information</string>
    <string name="impl_name">Implementation name</string>
    <string name="impl_switch_path">Switch path</string>
    <string name="impl_rgb_file_paths">RGB file path(s)</string>
    <string name="impl_format">Format specification</string>
    <string name="version">Version</string>
    <string name="light_theme_title">Enable light theme</string>
    <string name="light_theme_desc">Enables light theme with light background and slightly different looks.</string>
    <string name="show_support">Show support</string>
    <string name="rate">Rate this app</string>
    <string name="set_on_boot_switch_title">Enabled</string>
    <string name="set_on_boot_switch_enabled_desc">Night Light settings will be restored on boot.</string>
    <string name="icon_shape">Icon shape</string>
    <string name="circle">Circle</string>
</resources>