<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_padding"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/section_auto"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auto_enable"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_caption"
        android:text="@string/auto_enable"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_desc"
        android:text="@string/auto_enable_desc"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sun_enable"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_caption"
        android:text="@string/sun_switch"/>

    <com.corphish.widgets.KeyValueView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_time"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        custom:keyText="@string/start_time"
        custom:keySize="@dimen/text_normal"
        custom:valueText="@string/start_time_default"
        custom:valueSize="@dimen/text_desc"/>

    <com.corphish.widgets.KeyValueView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end_time"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        custom:keyText="@string/end_time"
        custom:keySize="@dimen/text_normal"
        custom:valueText="@string/end_time_default"
        custom:valueSize="@dimen/text_desc"/>
</LinearLayout>