<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SectionHeader"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/options"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/defaultPadding"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_caption"
        android:textAppearance="?android:textAppearance"
        android:id="@+id/lightTheme"
        android:text="@string/light_theme_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:textSize="@dimen/text_desc"
        android:text="@string/light_theme_desc"/>

    <com.corphish.widgets.ktx.KeyValueView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/iconShape"
        app:keyText="@string/icon_shape"
        app:keySize="16sp"
        app:valueSize="13sp"
        app:valueText="@string/circle"
        android:foreground="?selectableItemBackground"/>
</LinearLayout>