<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/defaultMargin"
    android:orientation="vertical">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:textSize="@dimen/text_caption"
        android:id="@+id/manualModeSwitch"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/manual_mode_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_mode_desc"
        android:textSize="@dimen/text_desc"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingBottom="8dp"
        android:id="@+id/infoManualColors"
        android:paddingStart="@dimen/layout_padding"/>

    <com.gregacucnik.EditableSeekBar
        android:id="@+id/red"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:esbTitle="@string/red"
        app:esbMax="256" />

    <com.gregacucnik.EditableSeekBar
        android:id="@+id/green"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:esbTitle="@string/green"
        app:esbMax="256" />

    <com.gregacucnik.EditableSeekBar
        android:id="@+id/blue"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:esbTitle="@string/blue"
        app:esbMax="256" />
</LinearLayout>