<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/preserveSwitch"
        android:text="@string/kcal_preservce_value_msg"
        android:checked="true"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backupEveryTimeSwitch"
        android:text="@string/kcal_backup_every_time_before_enabling"
        android:checked="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_desc"
        android:id="@+id/configureKcalBackup"
        android:textColor="@color/colorAccent"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_padding"
        android:text="@string/kcal_backup_set"/>
</LinearLayout>