<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/layout_padding"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SectionHeader"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/section_sob"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/text_caption"
        android:text="@string/set_on_boot_switch_title"
        android:id="@+id/setOnBootSwitch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginTop="2dp"
        android:text="@string/set_on_boot_switch_enabled_desc"
        android:textSize="@dimen/text_desc"
        android:id="@+id/setOnBootStatus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_padding"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/text_caption"
        android:textAppearance="?android:textAppearance"
        android:text="@string/set_on_boot_delay_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginTop="2dp"
        android:textSize="@dimen/text_desc"
        android:id="@+id/setOnBootDesc"
        android:text="@string/set_on_boot_delay_desc"/>

    <com.gregacucnik.EditableSeekBar
        android:id="@+id/setOnBootDelay"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:esbMax="60"
        app:esbValue="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="@dimen/text_sub_desc"
        android:id="@+id/setOnBootWarn"
        android:drawableStart="@drawable/ic_error"
        android:drawablePadding="12dp"
        android:visibility="gone"
        android:text="@string/set_on_boot_delay_warn"/>
</LinearLayout>