<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:textAppearance="?android:textAppearance"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/apply"
        android:text="@string/apply"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:textAppearance="?android:textAppearance"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/edit"
        android:text="@string/edit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:textAppearance="?android:textAppearance"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/delete"
        android:text="@string/delete"/>

</LinearLayout>