<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_padding"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceButton"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/about"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_desc"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/app_desc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_desc"
            android:id="@+id/githubLink"
            app:cornerRadius="4dp"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_margin="@dimen/layout_margin"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:text="@string/github"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_desc"
            android:layout_toEndOf="@id/githubLink"
            android:id="@+id/contributorsLink"
            app:cornerRadius="4dp"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_margin="@dimen/layout_margin"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:text="@string/contributors"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_desc"
            android:layout_toEndOf="@id/contributorsLink"
            android:id="@+id/xdaLink"
            app:cornerRadius="4dp"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_margin="@dimen/layout_margin"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:paddingBottom="@dimen/layout_padding"
            android:text="@string/xda"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceButton"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_padding"
        android:layout_margin="@dimen/layout_margin"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:layout_margin="@dimen/layout_margin"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        android:paddingBottom="@dimen/layout_padding"/>
</LinearLayout>